--- a/src/main/resources/templates/layout/header-nav.html
+++ b/src/main/resources/templates/layout/header-nav.html
@@ -34,13 +34,13 @@
                 </div>
             </div>
         </li>
+        <li class="nav-item menu">
+            <a th:href="@{/product/list}">히트상품</a>
+        </li>
 
-        <!-- 기타 메뉴 항목 -->
-        <li class="nav-item">
-            <a th:href="@{/product/list}">히트상품</a></li>
-        <li class="nav-item">추천상품</li>
-        <li class="nav-item">최신상품</li>
-        <li class="nav-item">인기상품</li>
-        <li class="nav-item">할인상품</li>
+        <li class="nav-item menu">추천상품</li>
+        <li class="nav-item menu">최신상품</li>
+        <li class="nav-item menu">인기상품</li>
+        <li class="nav-item menu">할인상품</li>
     </ul>
 </nav>
