--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -25,19 +25,19 @@
             <a class="logo" href="#" th:href="@{/}"><img class="logo__img" th:src="@{'/'+${appInfo.uploadDir}+'logo/'+${config.headerlogo}}" alt="로고"/></a>
             <div class="header_item">
                 <a th:href="@{/cs/layout/notice/list}">
-                    <img th:src="@{/images/main/main_notice.png}" alt="공지사항" style="width: 40px; height: 40px;">
+                    <img th:src="@{/images/main/main_notice2.png}" alt="공지사항" style="width: 40px; height: 40px;">
                     NOTICE
                 </a>
                 <a th:href="@{/cs/layout/faq/list}">
-                    <img th:src="@{/images/main/main_faq.png}" alt="자주묻는질문" style="width: 40px; height: 40px;">
+                    <img th:src="@{/images/main/main_faq2.png}" alt="자주묻는질문" style="width: 40px; height: 40px;">
                      FAQ
                 </a>
                 <a th:href="@{/myPage/home}">
-                    <img th:src="@{/images/main/main_mypage.png}" alt="마이페이지" style="width: 40px; height: 40px;">
-                    MyPage
+                    <img th:src="@{/images/main/main_mypage2.svg}" alt="마이페이지" style="width: 40px; height: 40px;">
+                    MYPAGE
                 </a>
                 <a th:href="@{/product/cart}">
-                    <img th:src="@{/images/main/main_cart.png}" alt="장바구니" style="width: 40px; height: 40px;">
+                    <img th:src="@{/images/main/main_cart2.svg}" alt="장바구니" style="width: 40px; height: 40px;">
                     CART
                 </a>
             </div>
