--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -6,7 +6,7 @@
 
 /* 메인영역 */
 main {
-    /*width: 1200px;*/
+    width: 1200px;
     height: auto;
     margin: 0 auto;
     overflow: hidden;
@@ -17,9 +17,11 @@ main {
   /* 메인 첫번째 섹션 */
   main > section {
     float: right;
-    width: 985px;
+    width: 1200px;
     height: auto;
     box-sizing: border-box;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
   
   main > section > section {
@@ -34,6 +36,8 @@ main {
     height: 425px;
     overflow: hidden;
     position: relative;
+    border-radius: 4px;
+
   }
   main > section > .slider > .bx-wrapper {
     -moz-box-shadow: none;
@@ -131,24 +135,23 @@ main {
   .totalImageBox {
     display: flex;
     height:100%;
-    width:100%;
+    width:300%;
+    transition: transform 0.5s ease;
   }
 
   .totalImageBox__img {
-    display:block; 
-    object-fit: cover;  
-    object-position: center; 
-    width:100%; 
-    height:100%
+    object-fit: cover;
+    object-position: center;
+    width:1200px;
+    height:100%;
   }
 
   .totalImageBox > a {
     display: block;
-    width: 100%;
+    width: 100%; /* a 태그가 이미지 너비에 맞춰 늘어나도록 설정 */
     height: 100%;
   }
-  .totalImageBox > a > img {
-  }
+
   .sliderPrev {
     width: 20px;
     text-align: center;
@@ -225,16 +228,37 @@ main {
 
 
   .product__free {
-      background-color: #5274ff;
+      background-color: #5394df;
       color:white;
       padding: 2px;
       border-radius: 4px;
       margin-right: 12px;
       display: block;
       width: fit-content;
+      font-size: 13px;
   }
 
   .dis_price{
       display: flex;
       justify-content: space-between;
+  }
+
+  .dis_price > ins{
+    font-weight: bold;
+  }
+
+  .org_price > span {
+    color: #eb000a;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  .org_price > del {
+    font-size: 14px;
+    color: #aaa;
+  }
+
+  .thumb > img {
+    height: 250px;
+    border-radius: 4px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
