--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -11,9 +11,7 @@
     <title>LotteOn 회원가입</title>
     <link rel="stylesheet" href="/css/include/header.css">
     <link rel="stylesheet" href="/css/include/footer.css">
-    <link rel="stylesheet" href="/static/css/user/user_style.css">
-    <link rel="stylesheet" th:href="@{/css/user/user_style.css}">
-
+    <link rel="stylesheet" href="/css/user/user_style.css">
 </head>
 
 <body>
@@ -45,7 +43,9 @@
 
         </div>
     </div>
+</div>
     <!-- 푸터영역 -->
     <footer th:replace="~{layout/footer::footer}"></footer>
+
 </body>
 </html>
