--- a/src/main/resources/templates/admin/include/admin_modal.html
+++ b/src/main/resources/templates/admin/include/admin_modal.html
@@ -363,8 +363,8 @@
                         <tr>
                             <th>성별</th>
                             <td>
-                                <input class="gendermodal " type="radio" name="gender" value="MALE"> 남자
-                                <input class="gendermodal " type="radio" name="gender" value="FEMALE"> 여자
+                                <input class="gendermodal " type="radio" name="gender" value="M"> 남자
+                                <input class="gendermodal " type="radio" name="gender" value="F"> 여자
                             </td>
                         </tr>
 
