--- a/src/main/resources/templates/admin/layout/adminlayout.html
+++ b/src/main/resources/templates/admin/layout/adminlayout.html
@@ -11,7 +11,9 @@
   <script type="text/javascript" th:src="@{/js/modal/modal.js}"></script>
   <script type="text/javascript" th:src="@{/js/modal/adminSearchPeriod.js}"></script>
   <link rel="icon" type="image/png" sizes="16x16" th:href="@{'/'+${appInfo.uploadDir}+'logo/'+${config.favicon}}">
-<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  <head>
   <meta charset="UTF-8" />
   <title>thymeleaf layout</title>
   <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1, user-scalable=yes,initial-scale=1.0" />
